fix: add to quiz-moderate--not-moderated property align-items: start

--- a/scss/adaptive.scss
+++ b/scss/adaptive.scss
@@ -291,6 +291,7 @@
 	.quiz-moderate {
 		width: 321px;
 		&--not-moderated {
+			align-items: start;
 			height: 40px;
 		}
 	}
